<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.pregi.android.speedtester.speedtest.SpeedtestGUIMainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/label_usehttps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/speedtest_text_options_usehttps"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/label_usehttps_note_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/speedtest_text_options_usehttps_note_ping"
            style="@style/FormItemNote"
            app:layout_constraintLeft_toLeftOf="@id/label_usehttps"
            app:layout_constraintTop_toBottomOf="@id/label_usehttps"/>

        <CheckBox
            android:id="@+id/checkbox_usehttps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/label_usehttps"/>

        <TextView
            android:id="@+id/label_pingcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/speedtest_text_options_pingcount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_usehttps_note_ping"/>

        <EditText
            android:id="@+id/input_pingcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/label_pingcount"
            android:ems="3"
            android:maxLength="2"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:gravity="end"/>

        <TextView
            android:id="@+id/label_downloadsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/speedtest_text_options_downloadsizeandcount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_pingcount"/>

        <LinearLayout
            android:id="@+id/values_download_payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_downloadsize"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:gravity="right"
            >
            <EditText
                android:id="@+id/input_downloadsize_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:maxLength="3"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:gravity="end" />
            <Spinner
                android:id="@+id/input_downloadsize_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/bytesize_scale_label"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="&#215;"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_pingcount"/>
            <EditText
                android:id="@+id/input_downloadcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:gravity="end" />
        </LinearLayout>




        <TextView
            android:id="@+id/label_uploadcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/speedtest_text_options_uploadsizeandcount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/values_download_payload"/>


        <LinearLayout
            android:id="@+id/values_upload_payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_uploadcount"
            >

            <EditText
                android:id="@+id/input_uploadsize_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toLeftOf="@id/input_uploadsize_scale"
                app:layout_constraintBaseline_toBaselineOf="@id/label_uploadsize"
                android:ems="4"
                android:maxLength="3"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:gravity="end" />

            <Spinner
                android:id="@+id/input_uploadsize_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/label_uploadsize"
                android:entries="@array/bytesize_scale_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="&#215;"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_pingcount"/>

            <EditText
                android:id="@+id/input_uploadcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/label_uploadcount"
                android:ems="3"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:gravity="end" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>